tests/ui-tests/tests/cases/wrong-enum-type.stderr
error[E0308]: mismatched types
  --> $DIR/wrong-enum-type.rs:17:21
   |
17 |         pub status: CheckConclusionState,
   |                     ^^^^^^^^^^^^^^^^^^^^ expected enum `CheckStatusState`, found enum `query_dsl::CheckConclusionState`
   |
   = note: expected struct `SelectionSet<'_, _, CheckStatusState>`
              found struct `SelectionSet<'static, _, query_dsl::CheckConclusionState>`
